# leakdetector

./: CMakeLists.txt  README.md
include/: leakdetector.h
src/: leakdetector.c
